--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "antd": "^4.1.3",
+    "aws-sdk": "^2.713.0",
     "immer": "^5.3.6",
     "node-fetch": "^2.6.0",
     "protobufjs": "^6.8.8",
